--- a/README.org
+++ b/README.org
@@ -1,5 +1,15 @@
-# `tjr_pcache`
+* ~tjr_pcache~
 
 This is a persistent cache, part of ImpFS. It maintains a persistent
 list of map operations, which avoids actually executing these
 operations against the B-tree.
+
+
+* Dependencies
+
+opam:
+<none>
+
+other:
+| tjr_btree | previous fs definitions
+
