--- a/README.org
+++ b/README.org
@@ -4,6 +4,9 @@ This is a persistent cache, part of ImpFS. It maintains a persistent
 list of map operations, which avoids actually executing these
 operations against the B-tree.
 
+* Documentation
+
+See https://tomjridge.github.io/tjr_pcache/ocamldoc/
 
 * Dependencies
 
