--- a/README
+++ b/README
@@ -13,9 +13,9 @@ See https://tomjridge.github.io/tjr_imp_build_script/
 * Dependencies
 
 opam:
-| yojson              | debug output        |
-| ppx_deriving_yojson | debug output        |
-| core, ppx_binprot   | for on-disk example |
+| yojson              | debug output                   |
+| ppx_deriving_yojson | debug output                   |
+| core, ppx_binprot   | for on-disk example and timing |
 
 other:
 | tjr_lib       |
